sources/2.2.0/sections/11-data_product_delivery.adoc

[[sec-data-product-delivery]]
== Data Product Delivery

=== Introduction
This clause describes how S-102 data will be delivered from the charting authority to the mariner.

*Units of Delivery*:: Exchange Set

*Transfer Size*:: See <<subsec-dataset-size>>.

*Medium Name*:: Digital Data Delivery

*Other Delivery Information*::
+
--
Each dataset must be contained in a physically separate, uniquely identified file on the transfer medium.

Each exchange set has a single exchange catalogue which contains the discovery metadata for each dataset.

An exchange set is encapsulated into a form suitable for transmission by a mapping called an encoding. An encoding translates each of the elements of the exchange set into a logical form suitable for writing to media and for transmission online. An encoding may also define other elements in addition to the exchange set contents (This is media identification, data extents etc. ...) and may define commercial constructs such as encryption and compression methods.

If the data is transformed in S-102 it must not be changed.

This Product Specification defines the encoding which must be used as a default for transmission of data between parties.

The encoding encapsulates exchange set elements as follows:

*Mandatory Elements*

* S-102 datasets -- HDF encoding
* Exchange Catalogue -- the XML encoded representation of exchange set catalogue features [discovery metadata].

*Optional Elements*

* S-102 Feature Catalogue -- If it is necessary to deliver the latest Feature Catalogue to the end user it may be done using the S-102 exchange set mechanism for datasets
* S-102 Portrayal Catalogue -- If it is necessary to deliver the latest Portrayal Catalogue to the end user it may be done using the S-102 exchange set mechanism for datasets.
--

=== Dataset

==== Dataset management
Three types of dataset files may be produced and contained within an exchange set:

* New dataset: Initial.
* New edition of a dataset: Includes new information. New editions must cover at least the same area as its predecessor.
* [[canc]]Cancellation: The dataset is cancelled and no longer available to be displayed or used.

[reviewer=Lawrence Haynes Haselmaier,from=canc]
****
After Andy/Anthony/Lawrence meeting:

No guidance provided.
For S-57: The Edition Number@ [EDTN] subfield must be set to 0. This message is only used to cancel a base cell file.

Chair has action to discuss with PT at-large
****

[[subsec-dataset-size]]
==== Dataset size
S-102 delivery will take place in one form: network transfer to platform (that is, internet download). An example scenario has been provided below: 

NOTE: The use of 10 MB in this and other sections should be treated as informative information only. Additionally, any computed values associated with either file size limit should be treated as approximate answers. Final selection of an appropriate file size limit or grid resolution is left to the discretion of the data producer.

*Network Transfer*:: To minimize overall file size, the HO produces a 10 MB file for wireless transmission to marine vessels. In uncompressed form, this file would contain roughly 600 nodes by 600 nodes.

<<tab-informative-grid-resolution-and-resulting-tile-size-at-chart-scale>> provides general information to aid in the compilation of S-102 data for specific charting scales.

<<annex-s102-dataset-size-and-production>> discusses in greater detail the physical size components of an S-102 file.


===== S-102 grid resolution and tiling

[[tab-informative-grid-resolution-and-resulting-tile-size-at-chart-scale]]
.Informative Grid Resolution and Resulting Tile Size at Chart Scale
[cols="<a,<a,<a",options="header"]
|===
|Scale |Informative Grid Resolution |Resulting Tile Size @ 10 MB

|NULL (only allowed on minimum display scale where the maximum display scale = 10,000,000)
|
|Approximate Linear Distance in Nautical Miles (M) for a 600 X 600 node grid

|1:10,000,000
|900 metres
|291 X 291

|1:3,500,000
|900 metres
|291 X 291

|1:1,500,000
|450 metres
|145 X 145

|1:700,000
|210 metres
|68 X 68

|1:350,000
|105 metres
|34 X 34

|1:180,000
|54 metres
|17.5 X 17.5

|1:90,000
|27 metres
|8.7 X 8.7

|1:45,000
|13 metres
|4.2 X 4.2

|1:22,000
|6 metres
|1.9 X 1.9

|1:12,000
|3 metres
|1.0 X 1.0

|1:8,000
|2 metres
|0.6 X 0.6

|1:4,000
|1 metres
|0.3 X 0.3

|1:3,000
|1 metres
|0.3 X 0.3

|1:2,000
|1 metres
|0.3 X 0.3

|1:1,000
|1 metres
|0.3 X 0.3
|===

[[subsec-dataset-file-naming]]
==== Dataset file naming
Dataset naming must follow a standard pattern to give implementers greater predictability of incoming datasets. S-102 dataset naming conventions must follow these rules.

//If ISO metadata files are included, a clause about naming them must be added. (RM comment 25 Jan 2023)

*102CCCCØØØØØØØØØØØØ.H5*::
102::: the first 3 characters identify the dataset as an S-102 dataset (mandatory).
CCCC::: the fourth to seventh characters identify the producer code of the issuing agency (mandatory for S-102). Where the producer code is derived from a 2- or 3-character format (for instance when converting S-57 ENCs), the missing characters of the producer code must be populated with zeros ("00" or "0" respectively) for the sixth and seventh characters of the dataset file name, as required ØØØØØØØØØØØØ::: the eighth to the maximum nineteenth characters are optional and may be used in any way by the producer to provide the unique file name. The following characters are allowed in the dataset name: A to Z, 0 to 9 and the special character _ (underscore).
H5::: denotes and HDF5 file.

=== Exchange Set
The structure of an S-102 Exchange Set must be according to the structure described below, which is based on <<iho-s100,part=17,clause=17-4.2>>.

//Revise in addordance with whatever is ultimately decided about ISO metadata files in S-102. (RM Comment 25Jan2023)

. An S-102 Exchange Set must contain an Exchange Set Catalogue, CATALOG.XML, its digital signature CATALOG.SIGN, and may contain any number of S-102 conformant dataset files, support files, and Catalogue files.

. All content must be placed inside a top root folder named S100_ROOT. This is the only top level root folder in an Exchange Set containing only S-100 products.

. The S100_ROOT folder must contain a subfolder named S-102. This subfolder holds content specific to the S-102 Product Specification.

. The S-102 subfolder must contain subfolders for the component dataset files (DATASET_FILES), support files (SUPPORT_FILES) and Catalogues (CATALOGUES) as required.

. Individual data files or detailed ISO 19115- 1/2/3 metadata may be optionally placed in their own subfolders or grouped together.

.	Support files, on the other hand, may be grouped together in one folder to prevent duplication across multiple dataset folders. Similarly, when needed, an Exchange Set may carry additional Catalogues and/or their different versions which should also be grouped together in one folder.

. The required Exchange Set Catalogue XML document instance must be named CATALOG.XML and placed in the S100_ROOT folder, together with its digital signature (CATALOG.SIGN) file. All other digital signatures are included within their corresponding resource metadata records in the CATALOG.XML.

. The only support files allowed in S-102 exchange sets are ISO metadata files.

=== Exchange Catalogue
The Exchange Catalogue acts as the table of contents for the Exchange Set. The Catalogue file of the Exchange Set must be named CATATLOG.XML. No other file in the Exchange Set may be named CATALOG.XML. The contents of the Exchange Catalogue are described in <<sec-metadata>>.

=== Data integrity and encryption
S-100 Part 15 defines the algorithms for compressing, encrypting and digitally signing datasets based on the S-100 Data Model. The individual Product Specifications provide details about which of the elements are being used and on which files in the dataset.

==== Use of compression
The data producer decides if compression will be used on the S-102 product files (HDF5). It is expected that a hydrographic office will make a policy decision and that all the S-102 datasets from the producer will be either compressed or uncompressed.

It is recommended to compress all the dataset files, for example HDF5 files. The ZIP compression method defined in S-100 Part 15 must be applied to the product files.

//Not clear what "The use of compression will be encoded" is saying, and the paragraph following is no longer correct (compression is an attribute of dataset discovery metadata blocks. Delete the following paragraph. (RM comment 23Jan2023) (Next paragraph commented out by LH)

//The use of compression will be encoded: +
//Since information about compression is encoded in the S-102_ExchangeCatalogue, it is implicitly applied to all the dataset files in the Exchange Set. It will not be //possible to create an Exchange Set where some HDF5 files are compressed while others are not. In cases where a data distributor produces an integrated S-102 product, //all sources are required to be either compressed or uncompressed at time of integration. In this situation the digital signature encoded into source data (that is, //original data producer) will be replaced with that of the distributor (Data Server).


==== Use of data protection
It is recommended to encrypt all the dataset files, for example HDF5. The encryption method defined in <<iho-s100,part=15>> must be applied.

==== Use of digital signatures
Digital signatures shall be used on all files included in a S-102 compliant Exchange Set to meet the requirements of IMO resolution MSC.428(98) to reduce cyber security risks among users, especially when used in navigations systems at sea. The recommended signature method is defined in <<iho-s100,part=15>>.

The digital signature information is encoded in the corresponding discovery block in the exchange catalogue for each file included in the Exchange Set.
